--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -84,6 +84,10 @@
                 <label for="floatingInput">Fecha de Nacimiento</label>
               </div>
               <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="direccion" placeholder="Direccion" name="direccion" ngModel>
+                <label for="floatingInput">Direccion</label>
+              </div>
+              <div class="form-floating mb-3">
                 <input type="number" class="form-control" id="peso" step="0.01" placeholder="Peso en Kg"name="peso" ngModel>
                 <label for="floatingInput">Peso en Kg</label>
               </div>
