Cargos de info en front
Co-Authored-By: sebasqr22 <63075293+sebasqr22@users.noreply.github.com>

--- a/FrontEnd/src/app/admin/admin.component.html
+++ b/FrontEnd/src/app/admin/admin.component.html
@@ -213,13 +213,13 @@
 
             <div class="form-group row">
               <div class="col-sm">
-                <label for="aprobacionProductosSelect">Producto o alimento</label>
+                <label for="aprobacionProductosSelect">Productos o alimentos no aprovados (Código de barras)</label>
                 <select class="form-control form-control-user" id="aprobacionProductosSelect"></select>
               </div>
             </div>
 
             <div class="col-sm">
-              <label for="aprobacionProductosDatos">El producto/alimento muestra los siguientes datos:</label>
+              <label for="aprobacionProductosDatos">La totalidad de los productos/alimentos muestran los siguientes datos:</label>
               <textarea class="form-control form-control-user" id="aprobacionProductosDatos" rows="4"
                         cols="50"></textarea>
             </div>
