--- a/FrontEnd/src/app/admin/admin.component.html
+++ b/FrontEnd/src/app/admin/admin.component.html
@@ -226,8 +226,21 @@
 
             <br>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-primary btn-user btn-block" (click)="aprobarProducto()">
               Aprobar
+            </a>
+
+            <br>
+
+            <div class="form-group row">
+              <div class="col-sm">
+                <label for="aprobacionProductosTotalSelect">Productos o alimentos (totalidad)</label>
+                <select class="form-control form-control-user" id="aprobacionProductosTotalSelect"></select>
+              </div>
+            </div>
+
+            <a class="btn btn-outline-primary btn-user btn-block" (click)="eliminarProducto()">
+              Eliminar
             </a>
 
           </div>
