LocalStorage del Id paciente en Movil, cambio en login FrontEnd
Co-Authored-By: Jimena León <85376454+menaleon@users.noreply.github.com>

--- a/FrontEnd/src/app/cliente/cliente.component.html
+++ b/FrontEnd/src/app/cliente/cliente.component.html
@@ -192,6 +192,12 @@
                           </div><br>
 
                           <div class="h5 mb-0 font-weight-bold text-gray-800">
+                            Segundo Apellido:
+                            <br><br>
+                            <input type="text" class="form-control form-control-user" id="apellido2">
+                          </div><br>
+
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">
                             Fecha de Nacimiento:
                             <br><br>
                             <input type="date" class="form-control form-control-user" id="fechaDeNacimiento">
