--- a/MovilApp/NutriTec/app/src/main/res/layout/registro_diario_fragment.xml
+++ b/MovilApp/NutriTec/app/src/main/res/layout/registro_diario_fragment.xml
@@ -84,7 +84,7 @@
             android:layout_marginTop="16dp"
             android:text=""
             android:textSize="16sp"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/white" />
         <Button
             android:id="@+id/registerConsumptionButton"
             android:layout_width="wrap_content"
