--- a/FrontEnd/src/app/login-nutri/login-nutri.component.html
+++ b/FrontEnd/src/app/login-nutri/login-nutri.component.html
@@ -112,11 +112,7 @@
                 <label for="floatingInput">Número de tarjeta</label>
               </div>
               <div class="form-floating mb-3">
-                <select type="text" class="form-control" id="tipoCobro" name="tipoCobro" ngModel>
-                  <option value="Semanal">Semanal</option>
-                  <option value="Mensual">Mensual</option>
-                  <option value="Anual">Anual</option>
-                </select>
+                <select type="text" class="form-control" id="tipoCobro" name="tipoCobro" ngModel></select>
                 <label for="floatingInput">Tipo de cobro</label>
               </div>
               <div class="form-floating mb-3">
