--- a/FrontEnd/src/app/login-nutri/login-nutri.component.html
+++ b/FrontEnd/src/app/login-nutri/login-nutri.component.html
@@ -16,8 +16,8 @@
 
             <form #form="ngForm" (ngSubmit)="login(form)">
               <div class="form-floating mb-3">
-                <input type="number" class="form-control" id="floatingInput" placeholder="1001001001" step="1" name="cedula" ngModel>
-                <label for="floatingInput">Cedula</label>
+                <input type="text" class="form-control" id="floatingInput" placeholder="test@gmail.com" step="1" name="cedula" ngModel>
+                <label for="floatingInput">Correo</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password" ngModel>
