--- a/FrontEnd/src/app/nutri/nutri.component.html
+++ b/FrontEnd/src/app/nutri/nutri.component.html
@@ -35,14 +35,7 @@
         </div>
 
 
-        <li class="nav-item">
-          <a class="nav-link collapsed" data-toggle="collapse"
-             (click)="mostrarPantalla('registro')">
-            <i class="fas fa-solid fa-registered"></i>
-            <span>Registro</span>
-          </a>
-        </li>
-
+        
         <li class="nav-item">
           <a class="nav-link collapsed" data-toggle="collapse"
              (click)="mostrarPantalla('gestionProductos')">
@@ -130,10 +123,10 @@
                     Profile
                   </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal">
+                  <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" (click)="logOut()">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Logout
-                  </a>
+                  </a> 
                 </div>
               </li>
 
@@ -227,7 +220,7 @@
                          aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
-              </div> -->
+              </div>>
 
             </div> <!-- termina el page content -->
           </div>
@@ -463,7 +456,7 @@
 
             </div>
 
-            <a class="btn btn-outline-success btn-user btn-block">
+            <a class="btn btn-outline-success btn-user btn-block" (click)="asignarPlanPaciente()">
               Asignar
             </a>
 
