Registro, login y Registro Diario movil

--- a/MovilApp/NutriTec/app/src/main/res/layout/registro_diario_fragment.xml
+++ b/MovilApp/NutriTec/app/src/main/res/layout/registro_diario_fragment.xml
@@ -22,7 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp" />
-
         <!-- Buscar producto o receta por nombre -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,6 +47,21 @@
             android:text="Buscar" />
 
     </LinearLayout>
+        <TextView
+            android:id="@+id/productFoundTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text=""
+            android:textSize="16sp"
+            android:textColor="@android:color/white" />
+    <Button
+        android:id="@+id/registerConsumptionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Registrar Consumo" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,11 +70,11 @@
         <!-- Buscar producto por código de barras -->
         <EditText
             android:id="@+id/barcodeEditText"
-            android:layout_width="257dp"
-            android:layout_height="88dp"
+            android:layout_width="234dp"
+            android:layout_height="105dp"
             android:layout_marginTop="16dp"
+            android:hint="Buscar producto por\n código de barras"
             android:inputType="number"
-            android:hint="Buscar producto por código de barras"
             android:minHeight="48dp" />
 
 
@@ -74,11 +88,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Buscar" />
-
         <!-- Botón "Registrar Consumo" -->
+
     </LinearLayout>
         <TextView
-            android:id="@+id/productFoundTextView"
+            android:id="@+id/productFoundTextView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -86,11 +100,10 @@
             android:textSize="16sp"
             android:textColor="@android:color/white" />
         <Button
-            android:id="@+id/registerConsumptionButton"
+            android:id="@+id/registerConsumptionButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Registrar Consumo" />
     </LinearLayout>
-
 </ScrollView>
