Update frontend funcionalidad

--- a/FrontEnd/src/app/cliente/cliente.component.html
+++ b/FrontEnd/src/app/cliente/cliente.component.html
@@ -252,7 +252,7 @@
                          aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
-              </div> -->
+              </div>
 
             </div> <!-- termina el page content -->
           </div>
@@ -326,8 +326,8 @@
 
             </div>
 
-            <a class="btn btn-outline-info btn-user btn-block">
-              Registrar
+            <a class="btn btn-outline-info btn-user btn-block" (click)="registrarPorProducto()">
+              Registrar por producto
             </a>
 
             <div class="form-group row">
@@ -343,7 +343,7 @@
             </div>
 
             <a class="btn btn-outline-info btn-user btn-block">
-              Registrar
+              Registrar por id
             </a>
 
           </div>
