--- a/FrontEnd/src/app/admin/admin.component.html
+++ b/FrontEnd/src/app/admin/admin.component.html
@@ -99,7 +99,7 @@
                     Profile
                   </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal">
+                  <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" (click)="logOut()">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Logout
                   </a>
@@ -196,7 +196,7 @@
                          aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
-              </div> -->
+              </div> >
 
             </div> <!-- termina el page content -->
           </div>
@@ -208,23 +208,25 @@
           <!-- EMPIEZA LA VENTANA APROBACION DE PRODUCTOS -->
 
           <div id="aprobacionProductos" class="container-fluid">
-            <h1 style="font-size:40px;" class="h3 mb-4 text-gray-800">Aprovación de productos</h1>
+            <h1 style="font-size:40px;" class="h3 mb-4 text-gray-800">Aprobación de productos</h1>
             <h2 style="font-size:20px;" class="h3 mb-4 text-gray-800">Verifique que los datos correspondientes al producto son veridicos y apruebelo si así lo considera.</h2>
-
-            <div class="form-group row">
-              <div class="col-sm">
-                <label for="aprobacionProductosSelect">Productos o alimentos no aprovados (Código de barras)</label>
-                <select class="form-control form-control-user" id="aprobacionProductosSelect"></select>
-              </div>
-            </div>
 
             <div class="col-sm">
               <label for="aprobacionProductosDatos">La totalidad de los productos/alimentos muestran los siguientes datos:</label>
               <textarea class="form-control form-control-user" id="aprobacionProductosDatos" rows="4"
                         cols="50"></textarea>
             </div>
+            <br>
+
+            <div class="form-group row">
+              <div class="col-sm">
+                <label for="aprobacionProductosSelect">Productos o alimentos no aprobados (Código de barras)</label>
+                <select class="form-control form-control-user" id="aprobacionProductosSelect"></select>
+              </div>
+            </div>
 
             <br>
+            
 
             <a class="btn btn-outline-primary btn-user btn-block" (click)="aprobarProducto()">
               Aprobar
