Reporte de avance

--- a/FrontEnd/src/app/cliente/cliente.component.html
+++ b/FrontEnd/src/app/cliente/cliente.component.html
@@ -485,7 +485,7 @@
 
             <br>
 
-            <a class="btn btn-outline-info btn-user btn-block">
+            <a class="btn btn-outline-info btn-user btn-block" (click)="generarReporteMedidas()">
               Generar registro
             </a>
 
