--- a/FrontEnd/src/app/nutri/nutri.component.html
+++ b/FrontEnd/src/app/nutri/nutri.component.html
@@ -491,8 +491,16 @@
               </div>
             </div>
 
-            <a class="btn btn-outline-success btn-user btn-block">
+            <a class="btn btn-outline-success btn-user btn-block" (click)="cargarRetroAlimentacion()">
+              Cargar registro diario
+            </a>
+
+            <a class="btn btn-outline-success btn-user btn-block" (click)="enviarRetroAlimentacion()">
               Enviar retroalimentación
+            </a>
+
+            <a class="btn btn-outline-success btn-user btn-block" (click)="test()">
+              test
             </a>
 
 
