Primer reporte ready

--- a/FrontEnd/src/app/cliente/cliente.component.html
+++ b/FrontEnd/src/app/cliente/cliente.component.html
@@ -499,7 +499,7 @@
 
             <br>
 
-            <a class="btn btn-outline-info btn-user btn-block">
+            <a class="btn btn-outline-info btn-user btn-block" (click)="reporte()">
               Generar PDF
             </a>
 
